--- a/app/src/main/res/layout/activity_hotel_detail_2_custom_gridview.xml
+++ b/app/src/main/res/layout/activity_hotel_detail_2_custom_gridview.xml
@@ -11,6 +11,7 @@
         android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/lightgrey"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
