--- a/app/src/main/res/layout/edit_image_adapter.xml
+++ b/app/src/main/res/layout/edit_image_adapter.xml
@@ -7,15 +7,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:padding="20dp"
         android:weightSum="1">
+
         <TextView
             android:id="@+id/nameTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="Name"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:text="Name" />
+            android:textStyle="bold" />
         <android.widget.Button
             android:id="@+id/addBtn"
             android:minHeight="40dp"
