--- a/app/src/main/res/layout/partner_custom_coupon.xml
+++ b/app/src/main/res/layout/partner_custom_coupon.xml
@@ -3,23 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#E5EBF3"
+    android:paddingBottom="10dp">
 
     <TextView
         android:id="@+id/promotionName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Promotion name"
-        android:layout_marginLeft="20dp"
-        android:textSize="20dp"
-        android:textColor="@color/black"
+        android:layout_gravity="center"
+        android:textSize="23dp"
+        android:textColor="@color/primary"
         android:textStyle="bold"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginHorizontal="50dp"
         android:orientation="horizontal">
 
         <TextView
@@ -50,7 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginHorizontal="50dp"
         android:orientation="horizontal">
 
         <TextView
@@ -82,7 +84,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginHorizontal="50dp"
         android:orientation="horizontal">
 
         <TextView
@@ -119,7 +121,9 @@
         android:paddingHorizontal="20dp"
         android:paddingVertical="12dp"
         app:srcCompat="@drawable/ic_delete"
+        android:backgroundTint="#FFDADA"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        app:tint="#B13A3A" />
 
 </LinearLayout>
