--- a/app/src/main/res/layout/partner_activity_coupon_list.xml
+++ b/app/src/main/res/layout/partner_activity_coupon_list.xml
@@ -19,6 +19,7 @@
         android:layout_gravity="center_horizontal"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
