--- a/app/src/main/res/layout/activity_edit_image_list.xml
+++ b/app/src/main/res/layout/activity_edit_image_list.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     tools:context=".partner.property.sub_property.EditImageListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -17,4 +18,4 @@
         android:layout_marginBottom="10dp"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
-</RelativeLayout>
+</LinearLayout>
