--- a/app/src/main/res/layout/edit_image_adapter.xml
+++ b/app/src/main/res/layout/edit_image_adapter.xml
@@ -3,41 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <LinearLayout
+    <android.widget.Button
+        android:id="@+id/id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="20dp"
-        android:weightSum="1">
-        <TextView
-            android:id="@+id/nameTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Name"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-        <android.widget.Button
-            android:id="@+id/addBtn"
-            android:minHeight="40dp"
-            android:minWidth="40dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="+" />
-        <android.widget.Button
-            android:id="@+id/deleteBtn"
-            android:minHeight="40dp"
-            android:minWidth="40dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="-" />
-    </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/imageRV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_marginVertical="10dp"
+        android:weightSum="1"
+        android:text="Phòng"
+        android:textAlignment="textStart"
+        android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
+        >
+
+    </android.widget.Button>
 
 </LinearLayout>
