--- a/app/src/main/res/layout/activity_edit_image_page.xml
+++ b/app/src/main/res/layout/activity_edit_image_page.xml
@@ -50,4 +50,10 @@
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/saveBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SAVE CHANGE" />
 </LinearLayout>
