--- a/app/src/main/res/layout/partner_activity_detail_property.xml
+++ b/app/src/main/res/layout/partner_activity_detail_property.xml
@@ -19,6 +19,12 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <ImageView
                 android:id="@+id/imgPropertyDetail"
                 android:layout_width="match_parent"
