--- a/app/src/main/res/layout/partner_fragment_properties.xml
+++ b/app/src/main/res/layout/partner_fragment_properties.xml
@@ -25,6 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:textSize="20dp"
+                android:textStyle="bold"
                 android:gravity="center_vertical"
                 android:text="Live properties" />
 
@@ -54,6 +55,13 @@
                 android:textSize="15sp"
                 app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
         </LinearLayout>
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true" />
 
         <ListView
             android:layout_marginTop="10dp"
