--- a/app/src/main/res/layout/activity_room_add_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_room_add_hotel_detail.xml
@@ -11,194 +11,208 @@
         android:layout_height="match_parent">
 
 
-        <TextView
-            android:id="@+id/textView21"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Where can people sleep?"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/spinnerTypeRoom"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerTypeRoom" />
-
-        <com.mcdev.quantitizerlibrary.HorizontalQuantitizer
-            android:id="@+id/guestStay_HQ"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="@+id/textView18"
-            app:layout_constraintTop_toBottomOf="@+id/textView18" />
-
-        <TextView
-            android:id="@+id/textView18"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="How many guest can stay?"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/textView21"
-            app:layout_constraintTop_toBottomOf="@+id/roomSelected_MultiGroup" />
-
-        <TextView
-            android:id="@+id/textView22"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="How many bathrooms are there?"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/guestStay_HQ"
-            app:layout_constraintTop_toBottomOf="@+id/guestStay_HQ" />
-
-        <com.mcdev.quantitizerlibrary.HorizontalQuantitizer
-            android:id="@+id/bathroom_HQ"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="@+id/textView22"
-            app:layout_constraintTop_toBottomOf="@+id/textView22" />
-
-        <TextView
-            android:id="@+id/textView24"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="How many bedrooms are there?"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/bathroom_HQ"
-            app:layout_constraintTop_toBottomOf="@+id/bathroom_HQ" />
-
-        <com.mcdev.quantitizerlibrary.HorizontalQuantitizer
-            android:id="@+id/bedroom_HQ"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="@+id/textView24"
-            app:layout_constraintTop_toBottomOf="@+id/textView24" />
-
-        <TextView
-            android:id="@+id/textView23"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="How big is this apartment?"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/bedroom_HQ"
-            app:layout_constraintTop_toBottomOf="@+id/bedroom_HQ" />
-
-        <EditText
-            android:id="@+id/areaET"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:ems="10"
-            android:inputType="number"
-            app:layout_constraintStart_toStartOf="@+id/textView23"
-            app:layout_constraintTop_toBottomOf="@+id/textView23" />
-
-        <TextView
-            android:id="@+id/textView25"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="7dp"
-            android:text="square meters"
-            app:layout_constraintBottom_toBottomOf="@+id/areaET"
-            app:layout_constraintStart_toEndOf="@+id/areaET" />
-
-
-        <com.nex3z.togglebuttongroup.MultiSelectToggleGroup
-            android:id="@+id/roomSelected_MultiGroup"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textView21"
-            app:layout_constraintTop_toBottomOf="@+id/textView21"
-            app:tbgChildSpacing="auto">
-
-            <com.nex3z.togglebuttongroup.button.LabelToggle
-                android:id="@+id/bedRoomSelected_Btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Bed Room" />
-
-            <com.nex3z.togglebuttongroup.button.LabelToggle
-                android:id="@+id/livingRoomSelected_Btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Living Room" />
-
-            <com.nex3z.togglebuttongroup.button.LabelToggle
-                android:id="@+id/kitchenRoomSelected_Btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Kitchen Room" />
-
-            <!--...-->
-
-        </com.nex3z.togglebuttongroup.MultiSelectToggleGroup>
-
-        <Button
-            android:id="@+id/nextBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Continue"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/descriptionEt" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <Spinner
-            android:id="@+id/spinnerTypeRoom"
-            style="@android:style/Widget.Material.Spinner.Underlined"
-            android:layout_width="301dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="10dp"
-            android:entries="@array/spinner_type_room"
-            app:layout_constraintStart_toStartOf="@+id/textView28"
-            app:layout_constraintTop_toBottomOf="@+id/textView28" />
+            <TextView
+                android:id="@+id/textView28"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="15dp"
+                android:text="What type of room?"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textView28"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
-            android:text="What type of room?"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/spinnerTypeRoom"
+                style="?attr/textInputOutlinedExposedDropdownMenuStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="5dp"
+                android:hint="Room type">
 
-        <EditText
-            android:id="@+id/descriptionEt"
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="45dp"
-            android:background="@drawable/edit_text_bg"
-            android:ems="10"
-            android:scrollHorizontally="false"
-            android:hint="Description"
-            android:inputType="text|textMultiLine"
-            android:paddingHorizontal="20dp"
-            android:text=""
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/areaET" />
+                <AutoCompleteTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="none"
+                    app:simpleItems="@array/spinner_type_room" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+<!--            <TextView-->
+<!--                android:id="@+id/textView21"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginLeft="15dp"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                android:text="Where can people sleep?"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textSize="20dp"-->
+<!--                android:textStyle="bold" />-->
+
+<!--            <com.nex3z.togglebuttongroup.MultiSelectToggleGroup-->
+<!--                android:id="@+id/roomSelected_MultiGroup"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginHorizontal="10dp"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                app:tbgChildSpacing="auto">-->
+
+<!--                <com.nex3z.togglebuttongroup.button.LabelToggle-->
+<!--                    android:id="@+id/bedRoomSelected_Btn"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Bed Room" />-->
+
+<!--                <com.nex3z.togglebuttongroup.button.LabelToggle-->
+<!--                    android:id="@+id/livingRoomSelected_Btn"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Living Room" />-->
+
+<!--                <com.nex3z.togglebuttongroup.button.LabelToggle-->
+<!--                    android:id="@+id/kitchenRoomSelected_Btn"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Kitchen Room" />-->
+
+<!--                &lt;!&ndash;...&ndash;&gt;-->
+
+<!--            </com.nex3z.togglebuttongroup.MultiSelectToggleGroup>-->
+
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="30dp"
+                android:text="How many guest can stay?"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <com.mcdev.quantitizerlibrary.HorizontalQuantitizer
+                android:id="@+id/guestStay_HQ"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="15dp">
+
+            </com.mcdev.quantitizerlibrary.HorizontalQuantitizer>
+
+            <TextView
+                android:id="@+id/textView22"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="How many bathrooms are there?"
+                android:textColor="@color/black"
+                android:layout_marginStart="15dp"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <com.mcdev.quantitizerlibrary.HorizontalQuantitizer
+                android:id="@+id/bathroom_HQ"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="15dp">
+
+            </com.mcdev.quantitizerlibrary.HorizontalQuantitizer>
+
+            <TextView
+                android:id="@+id/textView24"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="How many bedrooms are there?"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:layout_marginStart="15dp"
+                android:textStyle="bold" />
+
+            <com.mcdev.quantitizerlibrary.HorizontalQuantitizer
+                android:id="@+id/bedroom_HQ"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="15dp">
+
+            </com.mcdev.quantitizerlibrary.HorizontalQuantitizer>
+
+            <TextView
+                android:id="@+id/textView23"
+                android:layout_width="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_height="wrap_content"
+                android:text="How big is this apartment?"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/areaET"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="number" />
+
+                <TextView
+                    android:id="@+id/textView25"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text="square meters" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/descriptionEt"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginStart="45dp"
+                android:layout_marginVertical="10dp"
+                android:layout_marginEnd="45dp"
+                android:background="@drawable/edit_text_bg"
+                android:ems="10"
+                android:hint="Description"
+                android:inputType="text|textMultiLine"
+                android:paddingHorizontal="20dp"
+                android:scrollHorizontally="false"
+                android:text=""
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/nextBtn"
+                android:layout_width="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:text="Continue" />
+
+        </LinearLayout>
+
+
+        <!--        <Spinner-->
+<!--            android:id="@+id/spinnerTypeRoom"-->
+<!--            style="@android:style/Widget.Material.Spinner.Underlined"-->
+<!--            android:layout_width="305dp"-->
+<!--            android:layout_height="52dp"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:entries="@array/spinner_type_room"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/textView28"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/textView28" />-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
