--- a/app/src/main/res/layout/activity_room_add_hotel_detail_step3.xml
+++ b/app/src/main/res/layout/activity_room_add_hotel_detail_step3.xml
@@ -24,9 +24,10 @@
 
         <com.google.android.flexbox.FlexboxLayout
             android:id="@+id/flexboxLayout"
-            android:layout_width="389dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="20dp"
             app:alignContent="stretch"
             app:alignItems="stretch"
             app:flexWrap="wrap"
