--- a/app/src/main/res/layout/activity_room_add_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_room_add_hotel_detail.xml
@@ -186,7 +186,7 @@
                             <com.google.android.material.textfield.TextInputLayout
                                 android:id="@+id/spinnerTypeBed"
                                 style="?attr/textInputOutlinedExposedDropdownMenuStyle"
-                                android:layout_width="150dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="15dp"
                                 app:errorEnabled="true"
@@ -194,7 +194,7 @@
                                 android:hint="Bed type">
 
                                 <AutoCompleteTextView
-                                    android:layout_width="match_parent"
+                                    android:layout_width="200dp"
                                     android:layout_height="wrap_content"
                                     android:inputType="none"
                                     app:simpleItems="@array/spinner_type_bed" />
@@ -217,10 +217,7 @@
                                 android:layout_width="80dp"
                                 android:layout_height="match_parent"
                                 app:errorEnabled="true"
-
-                                android:layout_gravity="center"
-
-                                android:hint="Number of Bed">
+                                android:layout_gravity="center">
 
                                 <AutoCompleteTextView
                                     android:layout_width="match_parent"
@@ -241,7 +238,7 @@
                             <com.google.android.material.textfield.TextInputLayout
                                 android:id="@+id/spinnerTypeBed1"
                                 style="?attr/textInputOutlinedExposedDropdownMenuStyle"
-                                android:layout_width="150dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="15dp"
                                 app:errorEnabled="true"
@@ -250,7 +247,7 @@
                                 android:hint="Bed type">
 
                                 <AutoCompleteTextView
-                                    android:layout_width="match_parent"
+                                    android:layout_width="200dp"
                                     android:layout_height="wrap_content"
                                     android:inputType="none"
                                     app:simpleItems="@array/spinner_type_bed" />
@@ -272,9 +269,7 @@
                                 android:layout_width="80dp"
                                 android:layout_height="match_parent"
                                 app:errorEnabled="true"
-
-                                android:layout_gravity="center"
-                                android:hint="Number of Bed">
+                                android:layout_gravity="center">
 
                                 <AutoCompleteTextView
                                     android:layout_width="match_parent"
@@ -308,7 +303,7 @@
                             <com.google.android.material.textfield.TextInputLayout
                                 android:id="@+id/spinnerTypeBed2"
                                 style="?attr/textInputOutlinedExposedDropdownMenuStyle"
-                                android:layout_width="150dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="15dp"
                                 app:errorEnabled="true"
@@ -317,8 +312,8 @@
                                 android:hint="Bed type">
 
                                 <AutoCompleteTextView
-                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:layout_width="200dp"
                                     android:inputType="none"
                                     app:simpleItems="@array/spinner_type_bed" />
 
@@ -339,8 +334,7 @@
                                 android:layout_width="80dp"
                                 android:layout_height="match_parent"
                                 app:errorEnabled="true"
-                                android:layout_gravity="center"
-                                android:hint="Number of Bed">
+                                android:layout_gravity="center">
 
                                 <AutoCompleteTextView
                                     android:layout_width="match_parent"
