--- a/app/src/main/res/layout/activity_room_add_hotel_detail_step2.xml
+++ b/app/src/main/res/layout/activity_room_add_hotel_detail_step2.xml
@@ -152,7 +152,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:textColor="@color/black"
-                                android:layout_marginStart="25dp"
+                                android:layout_marginStart="10dp"
                                 android:textSize="15sp"
                                 android:text="Discount for 1 person" />
 
@@ -208,13 +208,101 @@
                                     />
 
                             </LinearLayout>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textStyle="bold"
+                                android:text="Minimum available guests"
+                                android:layout_marginStart="10dp"
+                                />
+
+                            <com.google.android.material.textfield.TextInputLayout
+                                android:id="@+id/minAvailableGuest"
+                                style="?attr/textInputOutlinedExposedDropdownMenuStyle"
+                                android:layout_width="200dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:gravity="center_vertical"
+                                android:layout_marginStart="10dp"
+
+                                app:errorEnabled="true">
+
+                                <AutoCompleteTextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:inputType="none" />
+
+                            </com.google.android.material.textfield.TextInputLayout>
+
                         </LinearLayout>
+
+
                     </com.google.android.material.card.MaterialCardView>
 
 
                 </LinearLayout>
 
+
             </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Price Summary"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="10dp"
+                        />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:weightSum="10"
+                        >
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="Number of Guests"
+                            android:textSize="16sp"
+                            android:textColor="@color/black"
+                            android:paddingStart="10dp"
+
+                            android:layout_weight="5"
+                            />
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="5"
+                            android:textColor="@color/black"
+                            android:text="Price"
+                            android:textSize="16sp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/priceSummaryLL"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+            </com.google.android.material.card.MaterialCardView>
+
 
             <Button
                 android:id="@+id/nextBtn"
