--- a/app/src/main/res/layout/activity_room_add_hotel_detail_step3.xml
+++ b/app/src/main/res/layout/activity_room_add_hotel_detail_step3.xml
@@ -13,22 +13,27 @@
 
         <Button
             android:id="@+id/chooseImageBtn"
+            style="?attr/materialButtonOutlinedStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Choose Image"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/primary"
+            android:drawableLeft="@drawable/upload_photo_svgrepo_com"
+            android:text="Upload Photos"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/textView45" />
 
         <com.google.android.flexbox.FlexboxLayout
             android:id="@+id/flexboxLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            app:alignContent="stretch"
             app:flexWrap="wrap"
+            app:justifyContent="space_around"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chooseImageBtn">
@@ -45,6 +50,17 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/flexboxLayout" />
+
+        <TextView
+            android:id="@+id/textView45"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Upload at least 1 photo before continue"
+            android:textSize="15sp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
